fixing add-projects sidebar on Safari - close #1906

--- a/css/inner/add-projects.less
+++ b/css/inner/add-projects.less
@@ -38,6 +38,9 @@
       margin-left: 3%;
       width: 70%;
     }
+    li {
+      clear: both;
+    }
     img {
       .pull-left();
       width: 25px;
